tests/fixtures/openbao/restore/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scratch-isolation
spec:
  endpointSelector: {}
  ingressDeny:
    - fromEntities: [all]
  egressDeny:
    - toEntities: [all]
